src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Assistance</fullName>
        <description>Assistance to solve a problem</description>
        <isActive>true</isActive>
        <values>
            <fullName>Boat removed</fullName>
        </values>
        <values>
            <fullName>Boat reported</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Found restoration project</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Provided advice</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Development proposal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pre-proposal</fullName>
        </values>
        <values>
            <fullName>Proposal approved</fullName>
        </values>
        <values>
            <fullName>Proposal approved with mitgation</fullName>
        </values>
        <values>
            <fullName>Proposal denied</fullName>
        </values>
        <values>
            <fullName>Proposal submitted</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Enforcement</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Boat removed</fullName>
        </values>
        <values>
            <fullName>Boat reported</fullName>
        </values>
        <values>
            <fullName>Citation</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Compliance assistance</fullName>
        </values>
        <values>
            <fullName>Dismissal</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Referred to law office</fullName>
        </values>
        <values>
            <fullName>Reported to DNR</fullName>
        </values>
        <values>
            <fullName>Stop work order</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reporting</fullName>
        <description>Report to DNR</description>
        <isActive>true</isActive>
        <values>
            <fullName>Boat removed</fullName>
        </values>
        <values>
            <fullName>Boat reported</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reported to DNR</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <description>How was this case resolved?</description>
        <inlineHelpText>How was this case resolved?</inlineHelpText>
        <label>Case Resolution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>citation</fullName>
                </value>
                <value>
                    <fullName>compliance assistance</fullName>
                </value>
                <value>
                    <fullName>correction notice issued</fullName>
                </value>
                <value>
                    <fullName>general letter</fullName>
                </value>
                <value>
                    <fullName>law office referral</fullName>
                </value>
                <value>
                    <fullName>Stop work order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Step_Deadline__c</fullName>
        <description>When is the next step due?</description>
        <inlineHelpText>When is the next step due?</inlineHelpText>
        <label>Next Step Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Abandoned_boat</fullName>
        <active>true</active>
        <businessProcess>Reporting</businessProcess>
        <label>Abandoned boat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Clearing_vegetation</fullName>
        <active>true</active>
        <businessProcess>Enforcement</businessProcess>
        <label>Clearing vegetation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Development_proposal</fullName>
        <active>true</active>
        <businessProcess>Development proposal</businessProcess>
        <label>Development proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flooding</fullName>
        <active>true</active>
        <businessProcess>Assistance</businessProcess>
        <description>Erosion or flooding issues</description>
        <label>Flooding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grading</fullName>
        <active>true</active>
        <businessProcess>Enforcement</businessProcess>
        <label>Grading</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hazardous_spill</fullName>
        <active>true</active>
        <businessProcess>Reporting</businessProcess>
        <label>Hazardous spill</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sediment</fullName>
        <active>true</active>
        <businessProcess>Enforcement</businessProcess>
        <description>Sediment and erosion control</description>
        <label>Sediment</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>